# mbtiles_tool

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: cicd.yml
files/: subdivide_example_config.json  subdivide_miniplanets.json
src/: converter.rs  geom.rs  lib.rs  lineclip.rs  main.rs  overzoom.rs  reader.rs  statistics.rs  subdivide.rs  tilebelt.rs  vector_tile_ops.rs  writer.rs
