[package]
name = "mbtiles_tool"
version = "0.1.3"
edition = "2021"
authors = ["Keitaroh Kobayashi <k.kobayashi@geolonia.com>"]
homepage = "https://github.com/geolonia/mbtiles_tool"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }

sqlite = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
num_cpus = "1.13.1"
rand = "0.8"
prost = "0.10"
geo = "0.22.1"

[dependencies.sqlite3-src]
version = "0.3"
features = ["bundled"]

[build-dependencies]
prost-build = { version = "0.10" }
